--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,12 @@
             <version>4.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.jgrapht</groupId>
+            <artifactId>jgrapht-core</artifactId>
+            <version>1.5.1</version>
+        </dependency>
+
         <!-- TESTING-->
         <dependency>
             <groupId>org.assertj</groupId>
